# learning-lab

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
python-fundamentals/notes/: day05-contextlib.md  day06-type-hints.md
python_fundamentals/exercises/: context_manager.py  contextlib_example.py  dataclass_basics.py  day11_product_manager.py  day12_product_validation.py  day12_pydantic_basics.py  day13_email_validation.py  day14_computed_field.py  day18-field-alias.py  decorator.py  inventory.py  pricing.py  pydantic-extra.py  timer.py
python_fundamentals/exercises/day_23_str_enum/: employee.py
python_fundamentals/exercises/day_24_decimal/: product_invoice.py
python_fundamentals/exercises/day_25_date_datetime/: README.md  employee.py
python_fundamentals/exercises/day_26_model_dump_serialization/: README.md  employee.py
python_fundamentals/exercises/employee_salary_module/: assignment.md  employee.py  test_employee.py
python_fundamentals/exercises/nested_models/: nested_models.py
python_fundamentals/notes/: day01-functions-and-validation.md  day02-args-and-kwargs.md  day03-decorators.md  day07-dataclasses.md  day08-inventory-manager.md  day09-pytest.md  day10-typeddict.md  day11-oop-fundamentals.md  day12-pydantic-basics.md  day13-email-str-and-field-validator.md  day23-str-enum.md  day25-date-datetime.md  day26-model-dump.md
python_fundamentals/tests/: test_day13_email_validation.py  test_inventory.py  test_pricing.py
python_templates/notes/: context_manager.md
python_templates/src/: context_manager.py  inventory.py  inventory_manager_reviewed.py  understanding_dataclass.py
templates/python-template/src/: pricing.py
