[project]
name = "learning-lab"
version = "0.1.0"
description = "Structured Python backend engineering practice with notes, exercises, mini-projects, and testing. "
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = [
    "python_fundamentals/tests",
]

python_files = [
    "test_*.py",
]


[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]

[tool.mypy]
python_version = "3.12"

strict = true

warn_return_any = true
warn_unused_configs = true

disallow_untyped_defs = true
disallow_incomplete_defs = true

check_untyped_defs = true

no_implicit_optional = true
